--- a/src/assets/css/Main.css
+++ b/src/assets/css/Main.css
@@ -1,9 +1,9 @@
 :root {
     --primary: #121212;
     --secondary: #333;
-    --p-color:rgb(246, 81, 147);
-    --s-color:rgb(203, 7, 105);
-    --t-color:rgba(150, 0, 139, 1);
+    --p-color: rgb(246, 81, 147);
+    --s-color: rgb(203, 7, 105);
+    --t-color: rgba(150, 0, 139, 1);
     --text-primary: #EAEAEA;
     --text-secondary: #ccc;
     --highlight: linear-gradient(95deg, rgba(254, 0, 102, 1) 17%, rgba(228, 0, 113, 1) 46%, rgba(150, 0, 139, 1) 100%);
@@ -11,6 +11,59 @@
     --button-hover: rgba(150, 0, 139, 1);
     --skill: rgb(32, 32, 32);
     --footer-text: #ccc;
+}
+
+.loading-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--primary);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.loading-overlay img {
+    position: absolute;
+    width: 60px;
+    height: auto;
+}
+
+.loader {
+    border: 8px solid var(--secondary);
+    border-top: 8px solid var(--button-bg);
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    animation: spin 1.5s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.content-wrapper {
+    opacity: 0;
+    animation: contentFadeIn 1s ease-out forwards;
+}
+
+@keyframes contentFadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
 
 ::-webkit-scrollbar {
@@ -167,13 +220,28 @@ p {
 
 .imageContainer {
     margin: 0 auto;
-    background: url("/public//images//me.png");
-    background-size: cover;
+    /* background: url("/public/images/profile.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover; */
     height: 100%;
     width: 55%;
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
     box-shadow: 20px 20px 40px #232323,
         -20px -20px 40px #4d4d4d;
     animation: animate 5s ease-in-out infinite;
+}
+
+.imageContainer img {
+    position: relative;
+    top: 7%;
+    width: 75%;
+    height: 130%;
+    object-fit: cover;
+    filter: brightness(.8);
+    /* filter: drop-shadow(1px 1px 10px rgb(255, 9, 128)); */
 }
 
 @keyframes animate {
@@ -347,7 +415,7 @@ p {
     align-items: center;
     gap: 10px;
     cursor: pointer;
-    box-shadow: rgba(244, 244, 244, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;       
+    box-shadow: rgba(244, 244, 244, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
     transition: all 0.25s ease-in-out;
 }
 
@@ -452,7 +520,7 @@ p {
     border-radius: 8px;
     width: 95%;
     height: 420px;
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;    
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
 .project h3 {
@@ -467,7 +535,7 @@ p {
     color: var(--text-secondary);
 }
 
-.GitButton{
+.GitButton {
     display: flex;
     width: 15%;
     gap: 10px;
@@ -478,7 +546,7 @@ p {
     color: var(--text-primary);
     padding: 10px 20px;
     font-weight: bold;
-    text-shadow: 1px 1px 1px  black;
+    text-shadow: 1px 1px 1px black;
     border-radius: 5px;
     text-decoration: none;
     text-align: center;
@@ -488,34 +556,36 @@ p {
 .project a:hover {
     background-color: var(--button-hover);
 }
+
 .carousel-container {
     position: relative;
     width: 100%;
     margin: auto;
     overflow: hidden;
-  }
-  
-  .carousel {
+}
+
+.carousel {
     display: flex;
     position: relative;
-  }
-  
-  .carousel-inner {
+}
+
+.carousel-inner {
     display: flex;
     transition: transform 0.5s ease-in-out;
-  }
-  
-  .carousel-item {
+}
+
+.carousel-item {
     width: 100%;
     flex: 0 0 auto;
-  }
-  .carousel-item img{
+}
+
+.carousel-item img {
     width: 100%;
     height: 250px;
     border-radius: 8px;
-  }
-  
-  .carousel-control {
+}
+
+.carousel-control {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -526,21 +596,22 @@ p {
     padding: 10px;
     cursor: pointer;
     z-index: 1;
-  }
-  
-  .carousel-control.prev {
+}
+
+.carousel-control.prev {
     left: 10px;
-  }
-  
-  .carousel-control.next {
+}
+
+.carousel-control.next {
     right: 10px;
-  }
-    /* .carousel-container:hover .carousel-control {
+}
+
+/* .carousel-container:hover .carousel-control {
     background-color: rgba(0, 0, 0, 0.7);
   } */
-  
- 
-  
+
+
+
 
 /* Contact Section */
 #contact {
@@ -551,23 +622,27 @@ p {
     background-color: var(--secondary);
     color: var(--text-primary);
 }
-.contactBox1{
+
+.contactBox1 {
     border-right: 1px solid var(--button-bg);
     padding: 2rem;
     height: 100%;
     display: flex;
     flex-direction: column;
 }
-.contactBox2{
+
+.contactBox2 {
     margin: auto;
 }
+
 .contactBox1 h2 {
     text-shadow: 1px 1px 1px var(--primary);
     font-size: 2rem;
     margin-bottom: 1rem;
 }
 
-.contact #Email,.contact #Mobile {
+.contact #Email,
+.contact #Mobile {
     font-size: 1.1rem;
     margin-bottom: 0.5rem;
 }
@@ -591,7 +666,7 @@ p {
     align-items: end;
 }
 
-.footerContent{
+.footerContent {
     margin: 0 auto;
     border-top: 2px solid var(--button-bg);
     height: 30%;
@@ -600,47 +675,56 @@ p {
     flex-direction: column;
     gap: 1rem;
     align-items: center;
-    justify-content: end ;
+    justify-content: end;
 }
-.MobileFooter{
+
+.MobileFooter {
     display: none;
 }
-.downloadbutton{
+
+.downloadbutton {
     display: none;
 }
+
 @media (min-width: 768px) and (max-width: 1300px) {
     .navbar .NavLogo {
         width: 30%;
     }
+
     .navbar .nav-links {
         width: 70%;
 
     }
-      /* Skill Section */
-      .skills-container {
+
+    /* Skill Section */
+    .skills-container {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 20px;
         margin: 0 auto;
     }
+
     .card {
         width: 90%;
         height: 250px;
-        padding: 0 35px 35px  10px;
+        padding: 0 35px 35px 10px;
     }
+
     .skill-item {
         width: 140px;
         height: 60px;
         font-size: 16px;
         padding: 5px 10px;
     }
+
     .project-list {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 2%;
         margin: 0 auto;
     }
-    .GitButton{
+
+    .GitButton {
         display: flex;
         width: 15%;
         gap: 10px;
@@ -649,17 +733,20 @@ p {
         left: 37.5%;
         padding: 10px 20px;
     }
-    
+
 }
-@media (max-width: 768px){
-    .nav-links{
-        display: none!important;
+
+@media (max-width: 768px) {
+    .nav-links {
+        display: none !important;
     }
-    .downloadbutton{
+
+    .downloadbutton {
         display: block;
         position: relative;
         right: 20px;
     }
+
     .MobileFooter {
         display: block;
         position: fixed;
@@ -674,6 +761,7 @@ p {
         z-index: 9999 !important;
 
     }
+
     #FooterIcons {
         padding: 0;
         margin: 15px auto;
@@ -684,6 +772,7 @@ p {
         width: 90%;
 
     }
+
     #FooterIcons li a {
         text-decoration: none;
         color: var(--footer-text);
@@ -722,6 +811,7 @@ p {
         top: 20px;
 
     }
+
     /* heroSection */
     .hero {
         margin-top: 20%;
@@ -730,18 +820,21 @@ p {
         display: grid;
         grid-template-columns: 1fr;
     }
+
     .HeroImage {
         height: 90%;
         width: 100%;
         position: relative;
     }
+
     .hero-content {
         height: 80%;
         width: 90%;
         position: relative;
-        top:0;
+        top: 0;
         padding: 15px;
     }
+
     .heroHead {
         font-size: 40px !important;
     }
@@ -750,9 +843,11 @@ p {
         font-size: 30px;
         font-weight: bolder;
     }
-    .cta-button{
+
+    .cta-button {
         font-size: 14px;
     }
+
     /* Skill Section */
     .skills-container {
         display: grid;
@@ -760,30 +855,35 @@ p {
         gap: 20px;
         margin: 0 auto;
     }
+
     .card {
         width: 90%;
         height: fit-content;
-        padding: 0 35px 35px  10px;
+        padding: 0 35px 35px 10px;
     }
+
     .skill-item {
         width: 140px;
         height: 50px;
         font-size: 16px;
         padding: 0px 10px;
     }
+
     /* Project Section */
     .projects {
         padding: 1rem;
         width: 90%;
 
     }
+
     .project-list {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         gap: 2%;
         margin: 0 auto;
     }
-    .GitButton{
+
+    .GitButton {
         display: flex;
         width: 25%;
         gap: 10px;
@@ -792,7 +892,8 @@ p {
         left: 34%;
         padding: 10px 20px;
     }
-/* Contact Section */
+
+    /* Contact Section */
     #contact {
         margin-top: 20%;
         height: 450px;
@@ -801,12 +902,14 @@ p {
         padding: .5rem;
 
     }
-    .contactBox1{
+
+    .contactBox1 {
         padding: 1rem;
         height: 150px;
         display: flex;
         flex-direction: column;
     }
+
     .footer {
         position: relative;
         padding: 0;
@@ -814,9 +917,10 @@ p {
         background-color: var(--primary);
         display: flex;
         justify-content: start;
-        align-items: start!important;
+        align-items: start !important;
     }
-    .footerContent{
+
+    .footerContent {
         background-color: #333;
         text-align: center;
         border-top: 2px solid var(--button-bg);
@@ -825,5 +929,5 @@ p {
         display: flex;
         justify-content: start;
     }
-    
+
 }
