--- a/src/assets/css/Main.css
+++ b/src/assets/css/Main.css
@@ -190,7 +190,7 @@ p {
     height: 35%;
     width: 70%;
     position: relative;
-    top: 20%;
+    top: 30%;
 
 }
 
@@ -200,7 +200,7 @@ p {
 }
 
 #Slogan span {
-    font-size: 1.3em;
+    font-size: 1.4em;
     font-weight: bold;
     color: var(--button-bg);
     text-shadow: 2px 2px 1px rgb(0, 0, 0);
@@ -209,6 +209,13 @@ p {
 #Slogan {
     font-family: 'Times New Roman', Times, serif;
     letter-spacing: 2px;
+    font-size: 18px;
+}
+#desc{
+    font-size: 1.1em;
+    line-height: 1.2;
+    color: var(--text-primary);
+    text-shadow: 2px 2px 1px rgb(0, 0, 0);
 }
 
 .HeroImage {
