--- a/src/assets/css/Main.css
+++ b/src/assets/css/Main.css
@@ -526,7 +526,7 @@ p {
     padding: 1rem;
     border-radius: 8px;
     width: 95%;
-    height: 420px;
+    height: 450px;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
@@ -823,11 +823,13 @@ p {
     .hero {
         margin-top: 20%;
         width: 100%;
-        height: 80dvh;
+        height: 82dvh;
         display: grid;
         grid-template-columns: 1fr;
     }
-
+    #desc{
+        font-size: 14px;
+    }
     .HeroImage {
         height: 90%;
         width: 100%;
@@ -906,7 +908,7 @@ p {
 
     /* Contact Section */
     #contact {
-        margin-top: 20%;
+        margin-top: 50%;
         height: 450px;
         display: grid;
         grid-template-columns: repeat(1, 1fr);
